--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "python.pythonPath": "env\\Scripts\\python.exe",
     "terminal.integrated.shell.windows": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
-    "python.unitTest.unittestArgs": ["-v", "-s", "tests", "-p", "*test*.py"],
-    "python.unitTest.unittestEnabled": true,
-    "python.unitTest.nosetestsEnabled": false,
-    "python.unitTest.pyTestEnabled": false,
+    "python.testing.unittestArgs": ["-v", "-s", "tests", "-p", "*test*.py"],
+    "python.testing.unittestEnabled": true,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pyTestEnabled": false,
     "python.linting.enabled": true,
     "python.linting.ignorePatterns": [
         ".vscode/**/*.py",
