--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,16 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe",
+    "python.pythonPath": ".venv/bin/python3",
     "terminal.integrated.shell.windows": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
-    "python.testing.unittestArgs": ["-v", "-s", "tests", "-p", "*test*.py"],
-    "python.testing.unittestEnabled": true,
+    "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pyTestEnabled": false,
+    "python.testing.pyTestEnabled": true,
     "python.linting.enabled": true,
     "python.linting.ignorePatterns": [
         ".vscode/**/*.py",
         "**/site-packages/**/*.py"
     ],
     "python.linting.pylintEnabled": true,
+    "python.linting.flake8Enabled": true,
     "python.linting.mypyEnabled": true,
     "python.terminal.activateEnvironment": true
 }
