--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
         "**/site-packages/**/*.py"
     ],
     "python.linting.pylintEnabled": true,
-    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Enabled": false,
     "python.linting.mypyEnabled": true,
     "python.pythonPath": "venv\\Scripts\\python.exe",
     "python.globalModuleInstallation": true,
