--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "python.testing.unittestEnabled": false,
-    "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.linting.enabled": true,
     "python.linting.ignorePatterns": [
@@ -11,6 +9,6 @@
     "python.linting.flake8Enabled": false,
     "python.linting.mypyEnabled": true,
     "python.pythonPath": "venv\\Scripts\\python.exe",
-    "python.globalModuleInstallation": true,
-    "python.formatting.provider": "black",
+    "python.globalModuleInstallation": false,
+    "python.formatting.provider": "black"
 }
