Fix to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author = Penny Wood
 author_email = pypl@ninjateaparty.com
 description = A python interface to the iZone airconditioner controller
 long_description= file: README.md
-long_description_content_type="text/markdown"
+long_description_content_type= text/markdown
 keywords=
     iZone
     IoT
